main.tf
provider "aws" {
  region     = "us-east-1"
  access_key = "AKIA3EFCSGYP7JRPGUESS"
  secret_key = "QFYxaHuKlO0S208lBlTYbsLImPqrEGKWCe+oGUESS"
}

# 1. Create VPC
resource "aws_vpc" "org-prod-vpc" {
  cidr_block = "10.0.0.0/16"
}

# 2. Create Internet Gateway
resource "aws_internet_gateway" "org-internet-gateway" {
  vpc_id = aws_vpc.org-prod-vpc.id

  tags = {
    Name = "Production-IG"
  }
}

# 3. Create Custom Route Table
resource "aws_route_table" "org-prod-route-table" {
  vpc_id = aws_vpc.org-prod-vpc.id

  route {
    cidr_block = "0.0.0.0/0" #  all IPv4 traffic whevere it points
    # cidr_block = "10.0.1.0/24"
    gateway_id = aws_internet_gateway.org-internet-gateway.id
  }

  route {
    ipv6_cidr_block        = "::/0"
    gateway_id = aws_internet_gateway.org-internet-gateway.id
  }
  tags = {
    Name = "prod-rt"
  }

}

# 4. Create a Subnet
resource "aws_subnet" "private-subnet" {
  vpc_id            = aws_vpc.org-prod-vpc.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "prod-private-subnet"
  }
}

# 5. Associate subnet with Route Table
resource "aws_route_table_association" "prod-rta" {
  subnet_id      = aws_subnet.private-subnet.id
  route_table_id = aws_route_table.org-prod-route-table.id
}

# 6. Create Security group to allow port 22, 80, 443
resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow web inbound traffic"
  vpc_id      = aws_vpc.org-prod-vpc.id

  ingress {
    description      = "Https"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  ingress {
    description      = "Http"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_web"
  }
}

# 7. Create a network interface with an ip in the subnet that was created in step 4
resource "aws_network_interface" "web-sever-nic" {
  subnet_id       = aws_subnet.private-subnet.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]

    #   attachment {
    #     instance     = aws_instance.test.id
    #     device_index = 1
    #   }
}
# 8. Assign an elastic IP to the network interface created in step 7
resource "aws_eip" "one" {
    vpc = true
    network_interface =aws_network_interface.web-sever-nic.id
    associate_with_private_ip = "10.0.1.50"
    depends_on = [aws_internet_gateway.org-internet-gateway]
  
}
# 9. Create Ubuntu server and install apache2
resource "aws_instance" "web-ubuntu-server" {
    ami = "ami-0567e0d2b4b2169ae"
    instance_type = "t2.micro"
    availability_zone = "us-east-1a"
    key_name = "EC2Tutorial"

    network_interface {
      device_index = 0
      network_interface_id = aws_network_interface.web-sever-nic.id
    }

    user_data = <<-EOF
                    #!/bin/bash
                    sudo apt update -y
                    sudo apt install apache2 -y
                    sudo systemctl start apache2
                    sudo bash -c 'echo My very first web server > /var/www/html/index.html'
                    EOF
    tags = {
      Name = "ubuntu 20.04"
    }
  
}
